Fix starter path (GitHub URL not npm package name)

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -11,5 +11,5 @@ MDX | Theme-UI | Custom Components
 The Chicago Docs theme for <a href="https://gatsbyjs.com/">Gatsby</a> is a modern and professional docs site for small open source projects. It was designed to be readable, easy to navigate, and accessible. For the full theme documentation, see the <a href="https://kabartolo.github.io/chicago-docs-demo/">Chicago Docs Demo</a>.
 
 ```
-gatsby new your-site-name @kabartolo/gatsby-starter-chicago-docs-core
+gatsby new your-site-name https://github.com/kabartolo/gatsby-starter-chicago-docs-core
 ```
